task5/tests/group/testsHW5/output/test8.out
lli: <stdin>:26:24: error: use of undefined value '%-21986'
%t0 = mul i32 %-21987, %-21986
                       ^

